# pic_viewer

./: .gitignore  CMakeLists.txt  COMPARISON.md  MediaViewer.pro  README-PROJECT.md  README.md  SCROLL_POSITION_TEST.md  build.sh  imageviewer.cpp  imageviewer.h  main.cpp  mainwindow.cpp  mainwindow.h  media-viewer.html  mediaitem.cpp  mediaitem.h  test_scroll.sh  zipimageviewer.cpp  zipimageviewer.h  zipmediaitem.cpp  zipmediaitem.h  zipreader.cpp  zipreader.h
.github/workflows/: release.yml
web-media-viewer/: QUICKSTART.md  README.md  build.sh  go.mod  main.go
web-media-viewer/static/: app.js  style.css
web-media-viewer/templates/: index.html
